--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 [program:gcsfuse]
-command=gcsfuse --foreground test-fuse-ccart  /var/lib/pgadmin
+command=gcsfuse --foreground %(ENV_GCS_BUCKET)s /var/lib/pgadmin
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
